[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-safe-overflow-position-002/003.html https://bugs.webkit.org/show_bug.cgi?id=280801

Reviewed by Antti Koivisto.

Let's override the align value in all cases when safe is set. It fixes cases when wrap is reversed and the overflow would stick out at the wrong
end.

https://drafts.csswg.org/css-align/#overflow-values

"If the size of the alignment subject overflows the alignment container, the alignment subject is instead aligned as if the alignment mode were start."

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleMainAxisAlignment const):
(WebCore::Layout::FlexLayout::handleCrossAxisAlignmentForFlexLines const):
* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForFlexLayoutWithReason):
(WebCore::LayoutIntegration::printReason):

Canonical link: https://commits.webkit.org/284609@main